# adk-multi-agent-educator

./: .env.example  .gitignore  README.md  demo.py  demo_multi_agent_routing.py  demo_notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  test_adk_agent.py  test_adk_compatibility.py  test_clean_responses.py  test_root_agent.py
english_agent_finetuned/: adapter_config.json
english_agent_finetuned/checkpoint-9/: adapter_model.safetensors  scheduler.pt  trainer_state.json
examples/: basic_usage.py  simple_demo.py
finetuning/: README.md  evaluate_model.py  finetune_english_agent.py  finetune_english_agent_mac.py  install_mac.sh  integrate_finetuned.py  integrate_finetuned_mac.py  prepare_dataset.py  requirements-finetuning-mac.txt  requirements-finetuning.txt
nb/: Gemma3_(4B).ipynb
src/: __init__.py  root_agent.py  root_agent_old.py
src/adk_educator/: __init__.py  api.py  cli.py  config.py  prompt.py
src/adk_educator/agents/: __init__.py  math_agent.py  music_agent.py  science_agent.py
src/adk_educator/core/: __init__.py  agent_base.py  coordinator.py  session_manager.py
src/adk_educator/sub_agents/: __init__.py
src/adk_educator/sub_agents/english_agent/: __init__.py
src/adk_educator/sub_agents/math_agent/: __init__.py
src/adk_educator/sub_agents/music_agent/: __init__.py
src/adk_educator/sub_agents/science_agent/: __init__.py
src/agent/: __init__.py  root_agent.py
src/sub_agents/: __init__.py  math_agent.py  music_agent.py  prompt.py  science_agent.py
